# autolamella

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.md  DEVELOPERS.md  INSTALLATION.md  LICENSE  README.md  TODO.txt  UI.py  UI.ui  USER_INPUT.md  autolamella.py  autolamellaUI.py  autolamellaUI.ui  autolamella_example.py  changes.md  index.html  install.bat  main.py  mkdocs.yml  protocol_autolamella.yaml  protocol_bacteria.yml  protocol_chlanda.yml  protocol_example.yml  protocol_offline.yml  pyproject.toml  pyproject2.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  shortcut.py  structures.py  system.yaml  test.ipynb
.appveyor_support/environments/: tst_py36.yml
.github/workflows/: docs.yml  python-package.yml
Autolamella_test_checklist/: index.html
INSTALLATION/: index.html
autolamella/: README.md  UI.py  UI.ui  __init__.py  _version.py  acquire.py  add_samples.py  align.py  autolamella.py  autolamella_ui.py  autoscript.py  bad_protocol.yaml  config.py  conversions.py  default_protocol.yaml  display.py  fiducial.py  interactive.py  main.py  milling.py  mocktypes.py  model.yaml  napari.yaml  new_protocol.yml  new_protocol_2.yml  notebook.ipynb  old_protocol.yml  openfibsem.code-workspace  protocol_autolamella.yaml  protocol_bacteria.yaml  protocol_bacteria.yml  protocol_converter.py  protocol_convertor_test.ipynb  protocol_ruby.yaml  sample.py  structures.py  system.yaml  user_input.py  utils.py  validate.py  (+3 more)
autolamella/compat/: notebook.ipynb  odemis.py
autolamella/data/: __init__.py  mocktypes.py
autolamella/liftout/: actions.py  autoliftout.py  structures.py
autolamella/liftout/config/: config.py  system.yaml
autolamella/liftout/protocol/: config.yaml  protocol-base.yaml  protocol-serial-liftout.yaml  protocol.yaml  protocol2.yaml  protocol_auto.yaml  protocol_serial.yaml
autolamella/liftout/ui/: AutoLiftoutUIv2.py  README.md  utils.py
autolamella/liftout/workflows/: notebook.ipynb  serial.py
autolamella/protocol/: constants.py  dev-protocol-tasks.yaml  protocol-autoliftout-base.yaml  protocol-autoliftout-yeast.yaml  protocol-base.yaml  protocol-chromatin.yaml  protocol-lifout.yaml  protocol-liftout.yaml  protocol-odemis-on-grid.yaml  protocol-on-grid-adaptive-polish-dl.yaml  protocol-on-grid-adaptive-polish.yaml  protocol-on-grid-new.yaml  protocol-on-grid.yaml  protocol-serial-liftout-new.yaml  protocol-serial-liftout.yaml  protocol-trench.yaml  protocol-waffle-new.yaml  protocol-waffle.yaml  protocol-waffle2.yaml  protocol.yaml  validation.py
autolamella/protocol/archive/: archive-protocol-serial-liftout-archive.yaml  protocol-liftout-archive.yaml  protocol-odemis-on-grid-archive.yaml  protocol-on-grid-v1-archive.yaml  protocol-serial-liftout-archive.yaml  protocol-waffle-archive.yaml
autolamella/tools/: data.py  notebook.ipynb  reporting.py  review.py  stats.py  telemetry.py  upload_to_hf.py
autolamella/ui/: AutoLamellaUI.py  AutoLamellaWorkflowDialog.py  AutoLiftoutUIv2.py  UI.py  UI.ui  __init__.py  _stylesheets.py  autolamella.py  tooltips.py  utils.py
autolamella/workflows/: actions.py  autoliftout.py  core.py  experimental.py  notebook.ipynb  runners.py  serial.py  tasks.py  ui.py
docs/: Autolamella_test_checklist.md  INSTALLATION.md  README.md  extras.md  features.md  index.md  protocol.md  protocol_converter_example.ipynb  walkthrough.md  walkthrough_2.md
extras/: index.html
features/: index.html
img/walkthrough_2/: Screenshot from 2023-08-04 11-17-32.png~  setup_default_lamella.png~
lamella/: __init__.py  acquire.py  add_samples.py  align.py  autoscript.py  conversions.py  display.py  fiducial.py  interactive.py  main.py  milling.py  sample.py  user_input.py  validate.py
lamella/data/: __init__.py
lamella/gui/: gui_input.py
protocol/: index.html
scripts/: install.bat  run_protocol_conversion.py  shortcut.py  task-notebook.ipynb  ui.bat
tests/: __init__.py  test_acquire.py  test_add_samples.py  test_align.py  test_autoscript.py  test_conversions.py  test_data.py  test_display.py  test_interactive.py  test_lamella.py  test_main.py  test_milling.py  test_structures.py  test_user_input.py  test_user_input.yml  test_validate.py
walkthrough/: index.html
(+18 files in other folders)
