[metadata]
name = autolamella
url = https://github.com/DeMarcoLab/autolamella
download_url = https://github.com/DeMarcoLab/autolamella
license = MIT License
license_file = License
description = Automatated ion beam milling for cryo-electron microscopy sample preparation.
long_description = file: README.md
long_description_content_type = text/markdown
author = Genevieve Buckley
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    
[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    autolamella_ui = autolamella.autolamella_ui:main
    
