[metadata]
name = autolamella
version = 0.2.2a0
url = https://github.com/DeMarcoLab/autolamella
download_url = https://github.com/DeMarcoLab/autolamella
license = MIT License
license_files = LICENCE
description = Automatated ion beam milling for cryo-electron microscopy sample preparation.
long_description = file: README.md
long_description_content_type = text/markdown
author = Genevieve Buckley
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Operating System :: OS Independent
    Framework :: napari
    
[options]
packages = find:
python_requires = >=3.9
install_requires = file: requirements.txt


[options.entry_points]
console_scripts =
    autolamella_ui = autolamella.autolamella_ui:main
napari.manifest =
    napari-autolamella = autolamella:napari.yaml
