[metadata]
name = autolamella
version = 0.2.5a0
author = Genevieve Buckley
description = Automatated ion beam milling for cryo-electron microscopy sample preparation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DeMarcoLab/autolamella
download_url = https://github.com/DeMarcoLab/autolamella
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Operating System :: OS Independent
    Framework :: napari
    
[options]
packages = find:
python_requires = >=3.9
install_requires = file: requirements.txt


[options.entry_points]
console_scripts =
    autolamella_ui = autolamella.ui.AutoLamellaUI:main
    autoliftout_ui = autolamella.liftout.ui.AutoLiftoutUIv2:main